syntax = "proto3";

package techshcool.pcbook;

import "memory_message.proto";

option go_package = "example.com/pcbook/pb";

message CPU {
  string brand = 1;
  string name = 2;
  uint32 number_cores = 3;
  uint32 number_threads = 4;
  double min_ghz = 5;
  double max_ghz = 6;
}

message GPU {
  string brand = 1;
  string name = 2;
  double min_ghz = 3;
  double max_ghz = 4;
  Memory memory = 5; // ใช้ Memory จากไฟล์ memory_message.proto
}
